# sub-model-solana

./: Anchor.toml  Cargo.toml  README.md  tsconfig.json
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/lib/: anchor.ts  idl.json
programs/sub-model/: Cargo.toml
programs/subscription-model/: Cargo.toml
tests/: Cargo.toml
tests/src/: lib.rs  test_01_trial_expiry.rs  test_02_past_due_to_unpaid.rs  test_03_cancel_at_period_end.rs  test_04_active_subscription.rs  test_05_trial_active_subscribers.rs  test_06_subscription_fields.rs  test_07_trial_period.rs  test_08_plan_fields.rs  test_09_initial_state.rs  test_10_grace_deadline.rs  test_11_access_control.rs  test_12_should_revoke_access.rs  test_13_multiple_plans.rs  test_14_trial_variations.rs  test_15_trial_days_variations.rs  test_16_status_tests.rs  test_17_previous_status_tracking.rs  test_18_subscription_details.rs  test_19_subscription_timestamp_fields.rs  test_20_trial_billing.rs  test_21_cancel_flag_initially_false.rs  test_22_paused_at_initially_none.rs  test_23_status_tests.rs  test_24_billing_period_duration.rs  test_25_grace_period_constant.rs  test_26_has_access_method.rs  test_27_failed_attempts_initially_zero.rs  test_28_plan_pda_derivation.rs  test_29_subscription_pda_derivation.rs  test_30_pda_tests.rs  test_30_subscription_creation.rs  test_31_subscription_basic.rs  test_31_subscription_tests.rs  test_32_user_owns_subscription.rs  test_33_plan_in_subscription.rs  test_34_plan_in_subscription.rs  test_35_ownership.rs  test_35_renew.rs  test_36_cancel.rs  (+5 more)
(+3 files in other folders)
