[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
subscription-model = { version = "0.1.0", path = "../programs/subscription-model" }
litesvm = "0.6.1"
litesvm-token = "0.6.1"